[package]
name = "ppcp"
version = "0.1.0"
authors = ["Nikita Bilous <nikita@bilous.me>"]
license = "MIT"
description = "Tool for copying files in console with neat progress bars"
repository = "https://github.com/acidnik/ppcp"
readme = "README.md"

[dependencies]
clap = "2.32.9"
failure = "0.1.5"
walkdir = "2.2.7"
indicatif = "0.15.0"
pathdiff = "0.1.0"
path_abs = "0.5.0"
