[package]
name = "ppcp"
version = "0.1.0"
authors = ["Nikita Bilous <nikita@bilous.me>"]
license = "MIT"
description = "Tool for copying files in console with neat progress bars"
repository = "https://github.com/acidnik/ppcp"
readme = "README.md"

[dependencies]
clap = {version="4.4",features=["cargo"]}
failure = "0.1.5"
walkdir = "2.2.7"
indicatif = "0.17.7"
pathdiff = "0.2.1"
path_abs = "0.5.0"
